hphp/hack/test/typecheck/method_redeclaration_same_name.php.exp
File "method_redeclaration_same_name.php", line 23, characters 3-18:
  arraykey
File "method_redeclaration_same_name.php", line 18, characters 19-19:
Member f has the wrong type (Typing[4341])
File "method_redeclaration_same_name.php", line 10, characters 24-29:
Expected string
File "method_redeclaration_same_name.php", line 18, characters 24-31:
But got arraykey
